--- a/Razor-qt.mw
+++ b/Razor-qt.mw
@@ -1,11 +1,42 @@
-{{InfoBox stack
-|{{InfoBox homepage|http://razor-qt.org|header=true}}
-|{{InfoBox wikipedia}}
+[http://razor-qt.org/ Razor-qt] is an advanced, easy-to-use, and fast desktop environment based on Qt technologies. It has been tailored for users who value simplicity, speed, and an intuitive interface. Unlike most desktop environments, Razor-qt also works fine with weak machines.
+
+== Installation ==
+
+You can install it using the following command:
+{{emerge|x11-wm/razorqt}}
+
+Razor-qt works with various window managers, and if you have none of the supported window managers installed, then the ebuild will default to [[Openbox]], as that is what most of its developers use.
+
+{{USEflag
+|doc
+|policykit+no+yes
 }}
 
-Razor-qt ''was'' an advanced, easy-to-use, and fast desktop environment based on the [[Qt]] framework. Razor-qt has been merged with the Qt port of LXDE, called "LXQt". A first version (0.7.0) was released in May 2014, which was based on Qt4. A newer version (0.8.0) was released in October 2014, based on Qt5.
+Note that the policykit USE flag is set by default in the desktop profile, which is recommended to be used with a desktop environment like Razor-qt.
 
-Because of compilation bugs with the last available version of Razor-qt, it was removed from the main gentoo repository. Users who want a light-weight Qt based desktop environment are recommended to upgrade to [[LXQt]].
+The post install message for this package will inform you that you will also likely want to install the following helper applications:
 
-[[Category:Desktop environment]]
-[[Category:Qt]]
+{{emerge|sys-fs/udisks sys-power/upower}}
+
+== Configuration ==
+
+Most of the configuration of Razor-qt can be done through the Razor Configuration Center, which you can select from the menu. Some options do not have a graphical configuration dialog yet, notably the theme setting. This can be set by editing the file ~/.razor/razor.conf, for example:
+{{File|~/.razor/razor.conf|Razor-qt theme configuration|
+[General]
+theme=a-mego
+icon_theme=oxygen
+}}
+
+Themes are installed in /usr/share/razor/themes.
+
+Also note that you can configure generic Qt settings in qtconfig.
+
+== Applications ==
+
+Most applications should work well with Razor-qt, but in case you want to keep in the spirit of a light-weight Qt-only desktop, please have a look at the recommendations on the [[QtDesktop]] page.
+
+== Support ==
+
+Support for Razor-qt on Gentoo can be found in the #gentoo-qt IRC channel and the [http://forums.gentoo.org/viewtopic-t-913958-highlight-.html Gentoo Forums Razor-qt topic]. Bugs should be filed at Gentoo's bugzilla.
+
+[[category:Desktop]]
