Initial QtDesktop page

--- a/Qt_Desktop_applications.mw
+++ b/Qt_Desktop_applications.mw
@@ -1,92 +1,36 @@
-This is [[Article description::a list of recommendations for a light-weight, non-KDE, Qt-only desktop environment]].
+This is a list of recommendations for a light-weight, non-KDE, Qt-only desktop environment.
 
-== Main Gentoo repository (Portage tree) ==
+== in portage ==
 
-=== Text and office apps ===
-
-* {{package|app-editors/focuswriter}} - fullscreen and distraction-free word processor
 * {{package|app-editors/juffed}} - tabbed text editor with syntax highlighting
-* {{package|app-editors/notepadqq}} - text editor similar to Notepad++
-* {{package|app-editors/tea}} - small, lightweight text editor
-* {{package|app-editors/qxmledit}} - Qt XML editor
-* {{package|app-office/lyx}} - frontend for LaTeX, DocBook, etc.
-* {{package|app-office/scribus}} - desktop publishing and layout program
-* {{package|app-office/texmaker}} - frontend for LaTeX
-* {{package|app-office/texstudio}} - Free cross-platform LaTeX editor (fork from texmakerX)
-* {{package|app-text/calibre}} - ebook management
-* {{package|app-text/coolreader}} - ebook reader
-* {{package|app-text/fbreader}} - ebook reader
 * {{package|app-text/goldendict}} - dictionary lookup program
-* {{package|app-text/kchmviewer}} - feature rich chm file viewer
-* {{package|app-text/qpdfview}} - tabbed PDF viewer
-
-=== Multimedia ===
-
-* {{package|media-gfx/nomacs}} - image viewer
-* {{package|media-gfx/photoqt}} - Simple but powerful Qt-based image viewer
-* {{package|media-gfx/phototonic}} - image viewer
-* {{package|media-sound/audacious}} - audio player
-* {{package|media-sound/bempc}} - Music Player Daemon client with experimental UI
-* {{package|media-sound/cantata}} - featureful Music Player Daemon client
 * {{package|media-sound/clementine}} - modern music player and library organizer
-* {{package|media-sound/coquillo}} - audio tagger
-* {{package|media-sound/flacon}} - extracts audio tracks from audio CD image to separate tracks
-* {{package|media-sound/qastools}} - ALSA mixer GUI
-* {{package|media-sound/qmmp}} - Audio player with Winamp/XMMS skins support
-* {{package|media-sound/quimup}} - Music Player Daemon client with cover art display
-* {{package|media-video/avidemux}} - video editor/transcoder
-* {{package|media-video/baka-mplayer}} - libmpv-based media player
-* {{package|media-video/minitube}} - YouTube client
-* {{package|media-video/smplayer}} - great MPlayer/mpv frontend
+* {{package|media-sound/qmpdclient}} - MPD client
+* {{package|media-video/smplayer}} - great MPlayer frontend
 * {{package|media-video/vlc}} - media player
+* {{package|net-im/qutim}} - instant messenger
+* {{package|net-p2p/qbittorrent}} - bittorrent client
+* {{package|net-p2p/transmission}} - bittorrent client
+* {{package|x11-wm/razorqt}} - desktop environment
 
-=== Network apps ===
+== in qt overlay ==
 
-* {{package|mail-client/trojita}} - IMAP e-mail client
-* {{package|net-dialup/cutecom}} - serial terminal
-* {{package|net-im/psi}} - instant messenger
-* {{package|net-im/vacuum}} - Jabber client
-* {{package|net-irc/kvirc}} - Advanced IRC Client
-<!-- * {{package|net-misc/dhcpcd-ui}} - graphical network manager (see also [[dhcpcd-ui]]) 
-    qt-support has been removed ( https://forums.gentoo.org/viewtopic-p-8116478.html#8116478 ) -->
-* {{package|net-misc/fatrat}} - download/upload manager
-* {{package|net-news/quiterss}} - RSS/Atom feed reader
-* {{package|net-news/rssguard}} - RSS/Atom feed reader
-* {{package|net-p2p/qbittorrent}} - BitTorrent client
-* {{package|net-p2p/transmission}} - BitTorrent client
-* {{package|net-wireless/wpa_supplicant}} - Wi-Fi front and back end (see also [[wpa_supplicant]])
-* {{package|www-client/falkon}} - Web browser
-* {{package|www-client/otter}} - Web browser
-* {{package|www-client/qupzilla}} - Web browser
-* {{package|www-client/qutebrowser}} - Web browser
+* media-gfx/nomacs - image viewer
+* media-sound/qastools - alsa mixer GUI
+* www-client/qupzilla - web browser
+* x11-misc/andromeda - file manager
+* x11-misc/ptbatterysystemtray - systray battery monitor
+* x11-misc/qxkb - keyboard layout switcher
+* x11-terms/qterminal - multitab terminal emulator
 
-=== Desktop utilities ===
+== to be added ==
 
-* {{package|app-admin/keepassxc}} - password manager
-* {{package|sci-calculators/speedcrunch}} - calculator
-* {{package|sys-apps/qdirstat}} - Qt application analyzing disk space allocation
-* {{package|x11-apps/copyq}} - clipboard manager with advanced features
-* {{package|x11-misc/qlipper}} - clipboard history applet
-* {{package|x11-misc/qps}} - process manager
-* {{package|x11-misc/qxkb}} - keyboard layout switcher
-* {{package|x11-terms/qterminal}} - multitab terminal emulator
-* {{package|x11-misc/qtfm}} - lightweight file manager
+* qconnman
+* qlipper
+* qtarc
+* qtpdfview
+* qtvim
 
-=== Desktop environment ===
+See also: [https://github.com/Razor-qt/razor-qt/wiki/3rd-party-applications Razor-qt 3rd party applications] and [http://www.qtdesktop.org/home/applist QtDesktop application list].
 
-* {{Package|lxqt-base/lxqt-meta}} - lightweight desktop environment (see also [[LXQt]])
-
-=== Other ===
-
-* {{Package|app-misc/anki}} - flash card program for learning purposes
-
-== To be added ==
-
-* bp-nfoview -[https://github.com/brainpower/bp-nfoview]
-
-== External resources ==
-
-* [https://github.com/Razor-qt/razor-qt/wiki/3rd-party-applications Razor-qt 3rd party applications]
-
-[[Category:Qt]]
-[[Category:Software]]
+[[category:Desktop]]
